<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/medium">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_time_date" />

            <com.jonapoul.fueltracker.ui.DateTimeView
                android:id="@+id/date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_distance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/distance_driven"
                    style="@style/Theme.FuelTracker.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/field_distance_driven"
                    app:errorEnabled="true"
                    app:suffixText="@string/suffix_miles">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Theme.FuelTracker.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        tools:text="123.4" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/distance_remaining"
                    style="@style/Theme.FuelTracker.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/field_distance_remaining"
                    app:errorEnabled="true"
                    app:suffixText="@string/suffix_miles">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Theme.FuelTracker.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:inputType="numberDecimal"
                        tools:text="12" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_driving_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mileage"
                    style="@style/Theme.FuelTracker.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/field_mileage"
                    app:errorEnabled="true"
                    app:suffixText="@string/suffix_mpg">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Theme.FuelTracker.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:inputType="numberDecimal"
                        tools:text="55" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/speed"
                    style="@style/Theme.FuelTracker.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/field_speed"
                    app:errorEnabled="true"
                    app:suffixText="@string/suffix_mph">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Theme.FuelTracker.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:inputType="numberDecimal"
                        tools:text="69" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_fuel_cost" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/total_cost"
                    style="@style/Theme.FuelTracker.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/field_total_cost"
                    app:errorEnabled="true"
                    tools:prefixText="£">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Theme.FuelTracker.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        tools:text="123.45" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cost_per_volume"
                    style="@style/Theme.FuelTracker.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/field_price_per_volume"
                    app:errorEnabled="true"
                    tools:prefixText="£">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Theme.FuelTracker.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        tools:text="1.895" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_location" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vendor"
                style="@style/Theme.FuelTracker.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_vendor"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.FuelTracker.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    tools:text="Sainsbury's" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/location"
                    style="@style/Theme.FuelTracker.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/field_location"
                    app:errorEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Theme.FuelTracker.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        tools:text="Townsville" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/button_locate"
                    android:src="@drawable/ic_my_location" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        app:icon="@drawable/ic_save" />

</LinearLayout>
